[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
addopts = "-p no:logging"

[tool.ruff]
line-length = 128
# select = ["E", "F"]
lint.select = [
  "E", # pycodestyle (includes missing newline at EOF, etc.)
  "F", # pyflakes
  "W", # pycodestyle warnings
  "I", # isort (import sorting)
  # "D",  # pydocstyle
  # "UP", # pyupgrade
  "PT", # pytest-style
  "Q",  # quote-conventions
  "PL", # pylint (useful for layout, blank lines, etc.)
]
lint.ignore = [
  "E741",
  "PLR0911",
  "PLR0912",
  "PLR0913",
  "PLR0914",
  "PLR0915",
  "PLR0916",
  "PLR0917",
  "PLR2004",
  "PLW0603",
]
lint.isort.known-local-folder = [
  "examples_common",
  "sequence_detail",
]
