[package]
name = "mqns_example_extctrl"
version = "0.0.0"
edition = "2024"

[dependencies]
anyhow = "^1.0.100"
async-nats = { version = "^0.45.0", features = ["websockets"] }
bpaf = { version = "^0.9.22", features = ["derive"] }
bytes = "^1.11.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "^1.48.0", features = ["full"] }
