[package]
name = "mqns_example_extctrl"
version = "0.0.0"
edition = "2024"

[dependencies]
anyhow = "^1.0.102"
async-nats = { version = "^0.47.0", features = ["websockets"] }
bpaf = { version = "^0.9.24", features = ["derive"] }
bytes = "^1.11.0"
serde = { version = "^1.0.228", features = ["derive"] }
serde_json = "^1.0.149"
tokio = { version = "^1.50.0", features = ["full"] }
tokio-stream = "^0.1.18"
